--- a/views/rooms.jade
+++ b/views/rooms.jade
@@ -1,15 +1,19 @@
 extends layout
 
 block content
-  h1 Chat Rooms:
+  h1 Chat Rooms
+  a.btn.btn-primary(href="/admin/rooms/add") Create a new chat room
   table.table.table-striped
     thead
       tr
+        th Action
         th Name
         th Id
     tbody
       each room in rooms
         tr
+          td(style="width: 50px"): a(href="/admin/rooms/delete/#{room.id}")
+            span.glyphicon.glyphicon-remove
           td= room.name
           td= room.id
     
