--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,4 +42,7 @@ html(lang='en')
                 a(href='/admin/rooms') Chat Rooms
               li
                 a(href='/admin/users') Users
+            ul.nav.navbar-nav.navbar-right
+              li
+                a(href='/logout') Logout
     block content
