--- a/views/layout.jade
+++ b/views/layout.jade
@@ -44,5 +44,5 @@ html(lang='en')
                 a(href='/admin/users') Users
             ul.nav.navbar-nav.navbar-right
               li
-                a(href='/logout') Logout
+                a(href='/logout') Welcome #{user.name} | Logout 
     block content
